--- a/src/features/catalogCard/skeletonCatalogCard/styles.module.scss
+++ b/src/features/catalogCard/skeletonCatalogCard/styles.module.scss
@@ -3,50 +3,79 @@
   grid-template: 4fr 1fr / 1fr;
   height: 200px;
 
-  .channel__top {
-    padding: 15px;
-    display: grid;
-    grid-template: 1fr / 1fr 3fr 2fr 1fr;
-    column-gap: 20px;
+  @media (max-width: 992px) {
+    height: 230px;
+  }
 
-    .channel__logo {
+  .channel {
+    display: grid;
+    grid-auto-flow: row;
+    padding: 15px;
+    row-gap: 20px;
+
+    @media (max-width: 768px) {
+      row-gap: 12px;
+    }
+
+    .channel__top {
       display: grid;
-      grid-auto-flow: row;
-      justify-content: center;
-      justify-items: center;
+      grid-template: 1fr / 1fr 3fr 2fr 1fr;
+      column-gap: 20px;
+
+      @media (max-width: 992px) {
+        grid-template: 1fr / 1fr 4fr 2fr;
+      }
 
       .channel__rate {
+        display: grid;
+        justify-content: left;
+      }
+
+      .rate {
         display: grid;
         grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
         column-gap: 5px;
       }
-    }
 
-    .channel__description {
-      display: grid;
-      grid-auto-flow: row;
-      align-items: start;
+      .channel__logo {
+        display: grid;
+        align-items: start;
 
-      .description {
+        .logo {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          justify-content: center;
+          justify-items: center;
+        }
+      }
+
+      .channel__info {
+        display: grid;
+        grid-auto-flow: row;
+        align-items: start;
+
+        .info {
+          display: grid;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          margin-top: 5px;
+        }
+      }
+
+      .channel__cross {
         display: grid;
         grid-auto-flow: row;
         row-gap: 10px;
-        margin-top: 5px;
-      }
-    }
+        align-content: center;
+        justify-items: center;
+        text-align: center;
 
-    .channel__cross {
-      display: grid;
-      grid-auto-flow: row;
-      row-gap: 10px;
-      align-content: center;
-      justify-items: center;
-      text-align: center;
-
-      .circle {
-        display: grid;
-        align-items: center;
-        justify-content: center;
+        .circle {
+          display: grid;
+          align-items: center;
+          justify-content: center;
+        }
       }
     }
   }
