--- a/src/features/selectOptions/UI/styles.module.scss
+++ b/src/features/selectOptions/UI/styles.module.scss
@@ -33,6 +33,11 @@
 .filter__wrapper {
   grid-template: 1fr/ 1fr 2fr;
   column-gap: 10px;
+
+  @media (max-width: 768px) {
+    grid-template: 1fr / 1fr;
+  }
+
   p {
     color: var(--Sub-text);
     font-size: 14px;
@@ -47,6 +52,7 @@
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
+    line-height: 1;
   }
 }
 
@@ -66,8 +72,8 @@
   button {
     display: grid;
     align-content: center;
-    padding: 20px 25px;
-    border-radius: 12px;
+    padding: 15px 25px;
+    border-radius: 10px;
     width: 100%;
 
     border: 1px solid var(--Inside-container);
@@ -79,6 +85,7 @@
       grid-auto-flow: column;
       align-items: center;
       justify-content: space-between;
+      column-gap: 10px;
 
       &.filter {
         display: grid;
@@ -112,6 +119,7 @@
       }
       padding: 10px;
       border: 1px solid var(--Inside-container);
+      height: 30px;
     }
   }
 
