--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -209,6 +209,7 @@ body {
   height: 3px;
   border-radius: 15px;
   min-width: 60px;
+  width: 100%;
   background: linear-gradient(
     to right,
     #5c89ff var(--male),
@@ -229,6 +230,14 @@ body {
     font-weight: 500;
     line-height: normal;
     margin-right: 12px;
+
+    @media (max-width: 992px) {
+      margin-right: 250px;
+    }
+
+    @media (max-width: 576px) {
+      margin-right: 100px;
+    }
   }
 
   &::after {
