feat: finish  adaptive cart page

--- a/src/features/addCart/UI/styles.module.scss
+++ b/src/features/addCart/UI/styles.module.scss
@@ -8,4 +8,5 @@
   background: var(--Personal-colors-White);
   border-radius: 10px;
   border: 1px solid var(--Personal-colors-main);
+  height: 100%;
 }
