--- a/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
+++ b/src/widgets/cartBlock/UI/createPost/UI/styles.module.scss
@@ -7,108 +7,199 @@
   top: 0;
   display: grid;
   grid-auto-flow: row;
-  align-items: center;
   justify-content: center;
   padding: 30px;
   border-radius: 20px;
   border: 0.5px solid rgba(0, 0, 0, 0.3);
   background: var(--Personal-colors-White);
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
-}
 
-.top {
-  display: grid;
-  grid-auto-flow: row;
-  text-align: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  padding-bottom: 30px;
-  justify-items: center;
-
-  svg {
-    height: 150px;
-    width: auto;
-    margin-bottom: 30px;
+  @media (max-width: 992px) {
+    grid-auto-flow: column;
+    column-gap: 40px;
+    padding: 15px;
   }
 
-  p {
-    color: var(--Personal-colors-black);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    margin-bottom: 10px;
+  @media (max-width: 768px) {
+    justify-content: initial;
+    padding: 10px;
   }
 
-  span {
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-  }
-}
+  .icon {
+    display: grid;
+    grid-auto-flow: row;
+    justify-items: center;
+    align-items: center;
 
-.data {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 20px;
-  margin-top: 30px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  padding-bottom: 30px;
-}
+    svg {
+      height: 150px;
+      width: auto;
 
-.data__row {
-  display: grid;
-  grid-auto-flow: column;
-  align-items: center;
-  justify-content: space-between;
-
-  p {
-    color: rgba(0, 0, 0, 0.6);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+      @media (max-width: 992px) {
+        height: 90px;
+      }
+    }
   }
 
-  span {
-    color: var(--Personal-colors-black);
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
+  .data {
+    display: grid;
+    grid-auto-flow: row;
+    row-gap: 20px;
+    margin-top: 30px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 30px;
+
+    @media (max-width: 992px) {
+      padding: 0;
+      margin: 0;
+      row-gap: 15px;
+      border: none;
+    }
+
+    &__text {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      text-align: center;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+      padding-bottom: 30px;
+
+      @media (max-width: 992px) {
+        padding: 0;
+        margin: 0;
+        border: none;
+      }
+
+      p {
+        color: var(--Personal-colors-black);
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
+
+      span {
+        color: rgba(0, 0, 0, 0.6);
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+
+    &__info {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 10px;
+
+      .info {
+        display: grid;
+        grid-auto-flow: column;
+        align-items: center;
+        justify-content: space-between;
+
+        p {
+          color: rgba(0, 0, 0, 0.6);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 1;
+        }
+
+        span {
+          color: var(--Personal-colors-black);
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 1;
+        }
+      }
+    }
   }
-}
 
-.finnaly {
-  display: grid;
-  grid-auto-flow: row;
-  row-gap: 20px;
-  align-items: center;
-  text-align: center;
-  margin-top: 30px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  padding-bottom: 30px;
+  .finnaly {
+    display: grid;
+    grid-auto-flow: row;
+    @media (max-width: 992px) {
+      align-content: space-between;
+    }
 
-  p {
-    color: rgba(0, 0, 0, 0.7);
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+    @media (max-width: 768px) {
+      grid-template: 1fr / 2fr 3fr;
+      column-gap: 25px;
+    }
+
+    @media (max-width: 576px) {
+      column-gap: 15px;
+    }
+
+    &__text {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: 20px;
+      align-items: center;
+      text-align: center;
+      margin-top: 30px;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+      padding-bottom: 30px;
+
+      @media (max-width: 992px) {
+        padding: 0;
+        margin: 0;
+        border: none;
+        row-gap: 15px;
+      }
+
+      p {
+        color: rgba(0, 0, 0, 0.7);
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 1;
+        white-space: nowrap;
+
+        @media (max-width: 768px) {
+          font-size: 16px;
+        }
+
+        @media (max-width: 375px) {
+          font-size: 14px;
+        }
+      }
+
+      span {
+        color: var(--Personal-colors-black);
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 1;
+        white-space: nowrap;
+
+        @media (max-width: 768px) {
+          font-size: 18px;
+        }
+
+        @media (max-width: 375px) {
+          font-size: 16px;
+        }
+      }
+    }
+
+    .button {
+      padding-top: 30px;
+      display: grid;
+      justify-content: stretch;
+
+      @media (max-width: 992px) {
+        padding: 0;
+      }
+
+      @media (max-width: 768px) {
+        p {
+          font-size: 16px;
+          white-space: nowrap;
+        }
+      }
+    }
   }
-
-  span {
-    color: var(--Personal-colors-black);
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-  }
-}
-
-.button {
-  margin-top: 30px;
-  display: grid;
-  justify-content: stretch;
 }
