--- a/src/features/accommList/UI/styles.module.scss
+++ b/src/features/accommList/UI/styles.module.scss
@@ -5,10 +5,12 @@
   column-gap: 50px;
 
   @media (max-width: 992px) {
-    grid-template: 1fr 1fr /1fr;
-    grid-template-areas:
-      "item2"
-      "item1";
+    display: flex;
+    flex-direction: column-reverse;
+    // grid-template: 1fr 1fr /1fr;
+    // grid-template-areas:
+    //   "item2"
+    //   "item1";
     row-gap: 30px;
     margin: 0 75px;
   }
