feat: chat logic updated

--- a/src/features/dinamicPagination/UI/styles.module.scss
+++ b/src/features/dinamicPagination/UI/styles.module.scss
@@ -6,6 +6,6 @@
   text-align: center;
   font-weight: 900;
   font-size: 30px;
-  background: blue;
-  height: 200px;
+  // background: blue;
+  height: 100px;
 }
