--- a/src/shared/ui/themeChanger/styles.module.scss
+++ b/src/shared/ui/themeChanger/styles.module.scss
@@ -115,7 +115,7 @@
       margin-top: 5px;
       position: absolute;
       background-color: var(--Personal-colors-White);
-      border: 1px solid #ccc;
+      // border: 1px solid #ccc;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       border-radius: 12px;
       padding: 5px;
