--- a/src/features/chatCard/UI/styles.module.scss
+++ b/src/features/chatCard/UI/styles.module.scss
@@ -37,23 +37,23 @@
   justify-content: space-between;
   align-content: space-between;
 
-  p {
-    color: var(--Sub-text);
+  .title {
+    // color: var(--Personal-colors-);
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
-    line-height: 0.75;
+    line-height: 1;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
 
-  span {
+  .text {
     color: var(--Text-sample);
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
-    line-height: 0.75;
+    line-height: 1;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -71,7 +71,7 @@
     font-size: 12px;
     font-style: normal;
     font-weight: 600;
-    line-height: 0.75;
+    line-height: 1;
   }
   .unread {
     display: grid;
@@ -87,7 +87,7 @@
       font-size: 10px;
       font-style: normal;
       font-weight: 500;
-      line-height: 0.75;
+      line-height: 1;
     }
   }
 }
