--- a/src/features/chatMessages/UI/styles.module.scss
+++ b/src/features/chatMessages/UI/styles.module.scss
@@ -1,10 +1,30 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
+  padding: 0 10px;
+  // align-items: end;
+  background: url("/images/phoneDisplay/tgbg.png") no-repeat;
+  background-size: cover;
+  position: relative;
+  overflow: hidden;
+  height: calc(100% - 70px);
+
+  .arrow__down {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: var(--Personal-colors-White);
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 70px;
+    right: 10px;
+  }
 
   .check {
     display: grid;
-    height: 440px;
     overflow-y: scroll;
     align-items: end;
 
@@ -20,6 +40,7 @@
       display: grid;
       grid-auto-flow: row;
       row-gap: 15px;
+      // padding-bottom: 60px;
 
       .messages_wrapper {
         display: grid;
@@ -31,6 +52,8 @@
 
   .row__message {
     display: flex;
+    position: relative;
+
     &.recipient {
       justify-content: start;
     }
@@ -43,7 +66,7 @@
   .message {
     display: grid;
     grid-auto-flow: row;
-    padding: 8px 16px;
+    padding: 8px 16px 20px 16px;
     border-radius: 10px;
     font-size: 12px;
     font-style: normal;
@@ -51,15 +74,27 @@
     max-width: 80%;
     row-gap: 5px;
     overflow-wrap: anywhere;
+    position: relative;
 
-    span {
-      text-align: end;
-      opacity: 0.5;
+    .time {
+      position: absolute;
+      bottom: 5px;
+      right: 5px;
+      // color: rgba(255, 255, 255, 0.5);
+      font-size: 10px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 1;
     }
+
+    // span {
+    //   text-align: end;
+    //   opacity: 0.5;
+    // }
 
     &.recipient {
       background: #f0f4f8;
-      color: var(--Sub-text);
+      color: var(--Personal-colors-black);
     }
 
     &.sender {
@@ -67,9 +102,11 @@
       color: var(--Personal-colors-White);
     }
   }
+
   .date {
     display: flex;
     justify-content: center;
+    padding: 5px;
 
     p {
       color: var(--Personal-colors-White);
@@ -84,22 +121,43 @@
   }
 }
 
-.wrapper_bottom {
+.end {
+  height: 60px;
+}
+
+.start {
+  height: 10px;
+}
+
+.wrapper__bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
   display: grid;
-  grid-template: 1fr / 0.07fr 1fr 0.07fr;
-  align-items: center;
+  grid-template: 1fr / minmax(10px, auto) 1fr minmax(10px, auto);
+  align-items: end;
   column-gap: 10px;
   padding: 10px;
+  width: 100%;
 
-  svg {
-    width: 24px;
-    height: 24px;
-  }
-
-  div {
+  button {
     display: grid;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
+    background-color: var(--Personal-colors-White);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+
+    svg {
+      width: 20px;
+      height: auto;
+    }
+
+    &:hover {
+      background-color: #999;
+    }
   }
 
   .input {
@@ -109,5 +167,40 @@
     border-radius: 10px;
     background: var(--Blue-Grey-Blue-Grey-050, #f0f4f8);
     width: 100%;
+    height: 100%;
+    position: relative;
+
+    font-family: Montserrat;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+
+    div {
+      width: inherit;
+      word-break: break-all;
+      outline: none;
+
+      &::-webkit-scrollbar {
+        width: 4px;
+        height: 2px;
+        background-color: #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        cursor: pointer;
+        background-color: #999;
+        border-radius: 5px;
+      }
+    }
+
+    span {
+      position: absolute;
+      pointer-events: none;
+      top: 10px;
+      left: 20px;
+      color: #999;
+    }
   }
 }
