--- a/src/features/partnerList/UI/styles.module.scss
+++ b/src/features/partnerList/UI/styles.module.scss
@@ -17,6 +17,17 @@
   }
 }
 
-// .isLeft {
-//   margin-left: -250px;
-// }
+.image {
+  width: 100%;
+  height: 100%;
+
+  @media (max-width: 768px) {
+    width: 75%;
+    height: 75%;
+  }
+
+  @media (max-width: 375px) {
+    width: 50%;
+    height: 50%;
+  }
+}
