--- a/src/widgets/customers/UI/styles.module.scss
+++ b/src/widgets/customers/UI/styles.module.scss
@@ -1,9 +1,8 @@
 .customer {
-  margin-bottom: 200px;
   display: grid;
   grid-auto-flow: row;
   row-gap: var(--row-gap-content-xl);
-  margin: 0 auto;
+  margin: 0 auto 200px auto;
   max-width: var(--container-width);
 
   @media (max-width: 992px) {
