--- a/src/widgets/header/UI/chat/styles.module.scss
+++ b/src/widgets/header/UI/chat/styles.module.scss
@@ -1,72 +1,71 @@
 .content {
   display: grid;
-  // margin: 15% auto;
+  align-items: start;
   border-radius: 25px;
   background: var(--Personal-colors-White);
   grid-template: 1fr / 0.7fr 1fr;
-  column-gap: 10px;
-  // height: 600px;
   overflow: hidden;
+  max-width: 850px;
+  height: 70vh;
+  width: 850px;
+  position: relative;
+
+  @media (max-width: 992px) {
+    width: 75vw;
+  }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    height: 100vh;
+    grid-template: none;
+  }
+
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 15px;
+    border-radius: 50%;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+  }
 
   &__left {
     display: grid;
+    align-items: start;
     grid-auto-flow: row;
-    align-content: space-between;
+    height: inherit;
     border-right: 0.5px solid rgba(0, 0, 0, 0.3);
 
-    big {
-      font-size: 24px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 0.75;
-      color: var(--Personal-colors-main);
-      padding: 25px 0;
-      text-align: center;
-    }
-
-    .filter {
+    .left {
       display: grid;
-      grid-auto-flow: column;
-      padding: 0 10px;
-      margin-bottom: 10px;
+      align-items: start;
+      grid-auto-flow: row;
 
-      li {
-        font-size: 14px;
+      .title {
+        font-size: 24px;
         font-style: normal;
         font-weight: 600;
         line-height: 0.75;
-        padding: 10px 0;
+        color: var(--Personal-colors-main);
+        padding: 25px 0;
+        text-align: center;
       }
-    }
 
-    .administration {
-      display: grid;
-      grid-auto-flow: column;
-      align-items: center;
-      justify-content: space-between;
-      padding: 10px 10px 10px 35px;
-      border-top: 0.5px solid rgba(0, 0, 0, 0.3);
-      cursor: pointer;
-
-      div {
+      .filter {
         display: grid;
-        justify-content: center;
-        align-content: center;
+        grid-auto-flow: column;
+        margin: 0 10px 10px 10px;
 
-        img {
-          width: 25px;
-          height: 25px;
-          border-radius: 50%;
-          border: 0.5px solid var(--Personal-colors-main);
+        li {
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 600;
+          line-height: 0.75;
+          padding: 10px 0;
         }
-      }
-
-      p {
-        color: var(--Sub-text);
-        font-size: 12px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: 0.75;
       }
     }
 
@@ -75,7 +74,6 @@
       grid-auto-flow: row;
       align-content: start;
       overflow-y: scroll;
-      height: 445px;
 
       &::-webkit-scrollbar {
         display: none;
@@ -88,15 +86,25 @@
   }
 
   &__right {
-    display: grid;
-    grid-template: 1fr 6fr 1fr / 1fr;
-    align-content: space-between;
-    padding-right: 10px;
-    padding-bottom: 10px;
+    // display: grid;
+    // grid-auto-flow: row;
+    position: relative;
+    height: inherit;
+    background: var(--Personal-colors-White);
 
-    .close {
+    @media (max-width: 768px) {
+      position: fixed;
+      width: inherit;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 10px;
+      left: 15px;
       padding: 15px;
       border-radius: 50%;
+      transform: rotate(180deg);
+
       &:hover {
         background-color: rgba(0, 0, 0, 0.1);
       }
@@ -127,9 +135,15 @@
         grid-auto-flow: column;
         column-gap: 10px;
         justify-content: start;
-        padding: 15px;
+        padding: 15px 65px 15px 15px;
+
+        @media (max-width: 768px) {
+          padding: 15px 65px 15px 65px;
+        }
 
         .logo {
+          display: grid;
+
           img {
             width: 40px;
             height: 40px;
