--- a/src/widgets/header/UI/lang/styles.module.scss
+++ b/src/widgets/header/UI/lang/styles.module.scss
@@ -9,20 +9,20 @@
     display: grid;
     align-content: center;
     justify-content: center;
-    padding: 6px 15px;
-    height: 25px;
     border-radius: 12px;
-    border: 1px solid var(--Personal-colors-main);
-    color: var(--first-text);
+    // border: 1px solid var(--Personal-colors-main);
     cursor: pointer;
-    font-weight: inherit;
+    height: 24px;
+    width: 24px;
+    background: var(--Personal-colors-black);
   }
 
   .menu {
     margin-top: 5px;
     display: block;
     position: absolute;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: var(--Personal-colors-White);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
@@ -36,6 +36,11 @@
       grid-auto-flow: column;
       gap: 5px;
       align-items: center;
+      width: 60px;
+
+      svg {
+        border-radius: 50%;
+      }
 
       &:hover {
         background-color: #f0f0f0;
