--- a/src/widgets/header/UI/dropdownMenu/UI/styles.module.scss
+++ b/src/widgets/header/UI/dropdownMenu/UI/styles.module.scss
@@ -91,6 +91,23 @@
         height: var(--header-height-sm);
       }
 
+      .logo {
+        color: rgba(0, 0, 0, 0.3);
+        font-size: 44px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        cursor: pointer;
+
+        @media (max-width: 768px) {
+          font-size: 24px;
+        }
+
+        @media (max-width: 375px) {
+          font-size: 20px;
+        }
+      }
+
       @media (max-width: 375px) {
         height: var(--header-height-xs);
       }
