--- a/src/widgets/header/UI/lang/styles.module.scss
+++ b/src/widgets/header/UI/lang/styles.module.scss
@@ -10,11 +10,10 @@
     align-content: center;
     justify-content: center;
     border-radius: 12px;
-    // border: 1px solid var(--Personal-colors-main);
     cursor: pointer;
     height: 24px;
     width: 24px;
-    background: var(--Personal-colors-black);
+    // background: var(--Personal-colors-black);
   }
 
   .menu {
@@ -26,8 +25,14 @@
     background-color: var(--Personal-colors-White);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     z-index: 1;
-    border-radius: 12px;
+    border-radius: 5px;
     overflow: hidden;
+
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    width: 95px;
+    padding: 10px;
 
     .menu__item {
       padding: 8px;
@@ -36,13 +41,20 @@
       grid-auto-flow: column;
       gap: 5px;
       align-items: center;
-      width: 60px;
+      img {
+        width: 24px;
+        height: 24px;
+      }
 
-      svg {
+      div {
+        height: 9px;
+        width: 9px;
         border-radius: 50%;
+        overflow: hidden;
       }
 
       &:hover {
+        border-radius: 5px;
         background-color: #f0f0f0;
         color: var(
           --Gradient-1,
