--- a/src/features/catalogCard/UI/styles.module.scss
+++ b/src/features/catalogCard/UI/styles.module.scss
@@ -23,6 +23,7 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+      word-break: break-word;
     }
 
     &__top {
