--- a/src/features/postButtons/UI/styles.module.scss
+++ b/src/features/postButtons/UI/styles.module.scss
@@ -1,6 +1,7 @@
 .open {
   border-radius: 12px;
-  border: 1px solid var(--Containers);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
+  background: #fff;
 
   p {
     color: var(--Sub-text);
