--- a/src/features/postFiles/UI/styles.module.scss
+++ b/src/features/postFiles/UI/styles.module.scss
@@ -1,13 +1,14 @@
 .open {
   border-radius: 12px;
-  border: 1px solid var(--Containers);
   display: grid;
   grid-auto-flow: column;
   column-gap: 10px;
   justify-content: center;
-
+  box-shadow: 0px 0px 3px var(--Personal-colors-green-hover);
+  background: #fff;
+  
   p {
-    color: var(--Sub-text);
+    color: var(--Personal-colors-green-hover);
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
