--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -75,6 +75,7 @@ main {
   &__blue {
     color: var(--Personal-colors-White);
     background: var(--Gradients-Gradient-1);
+
     &:hover {
       background: #005aa5;
     }
@@ -84,6 +85,7 @@ main {
     color: var(--Personal-colors-main);
     border: 1px solid var(--Personal-colors-main);
     background: #fff;
+
     &:hover {
       background: rgb(237, 237, 237);
     }
@@ -106,6 +108,7 @@ main {
   &__yellow {
     color: var(--Personal-colors-White);
     background: var(--Orange);
+
     &:hover {
       background: var(--Orange);
     }
@@ -116,6 +119,16 @@ main {
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 80px);
+  background: url("/images/rootBg/DesktopBG.svg") repeat top center;
+  background-size: cover;
+
+  @media (max-width: 992px) {
+    background: url("/images/rootBg/TabletBG.svg") repeat top center;
+  }
+
+  @media (max-width: 576px) {
+    background: url("/images/rootBg/MobileBG.svg") repeat top center;
+  }
 
   header,
   footer {
@@ -199,6 +212,7 @@ main {
   from {
     transform: translateX(100%);
   }
+
   to {
     transform: translateX(0);
   }
@@ -208,9 +222,11 @@ main {
   0% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(-100px);
   }
+
   50% {
     transform: translateX(15px);
   }
@@ -229,11 +245,9 @@ main {
   border-radius: 15px;
   min-width: 60px;
   width: 100%;
-  background: linear-gradient(
-    to right,
-    #5c89ff var(--male),
-    #fc65ff var(--male) 100%
-  );
+  background: linear-gradient(to right,
+      #5c89ff var(--male),
+      #fc65ff var(--male) 100%);
 
   &::before {
     content: attr(data-male);
@@ -310,6 +324,7 @@ main {
     from {
       opacity: 0;
     }
+
     to {
       opacity: 1;
     }
@@ -377,9 +392,8 @@ main {
     z-index: var(--zIndexTop);
     margin: var(--borderMass);
 
-    border-radius: calc(
-      var(--borderRadius) - var(--borderMass)
-    ); /* !importanté */
+    border-radius: calc(var(--borderRadius) - var(--borderMass));
+    /* !importanté */
     background: var(--Personal-colors-White);
   }
 
@@ -392,7 +406,8 @@ main {
     left: 0;
     z-index: var(--zIndexBottom);
     // z-index: -2;
-    border-radius: var(--borderRadius); /* !importanté */
+    border-radius: var(--borderRadius);
+    /* !importanté */
     // background: var(--Gradients-Gradient-1);
     background: var(--gradient);
   }
@@ -473,6 +488,7 @@ main {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
