--- a/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
+++ b/src/widgets/createOrderBlock/UI/createOrderPost/UI/styles.module.scss
@@ -7,7 +7,7 @@
   .content {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 30px;
+    row-gap: 10px;
     padding-top: 30px;
 
     .top {
@@ -53,10 +53,35 @@
       padding: 0px 110px;
 
       .post_type_filter {
+        display: grid;
+        grid-template: 1fr / auto auto;
+        gap: 50px;
+        align-items: center;
+        justify-content: start;
+
         li {
+          font-size: var(--row-gap-title-xl);
+          font-weight: 500;
+          cursor: pointer;
+          position: relative;
+
           &.active__type {
-            background-color: #000;
-            color: #fff;
+            background: var(--Gradients-Gradient-1);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            /* Включаем поддержку для Firefox */
+            background-clip: text;
+            color: transparent;
+
+            &::after {
+              content: "";
+              position: absolute;
+              left: 0;
+              bottom: 0;
+              width: 100%;
+              height: 2.5px;
+              background: var(--Gradients-Gradient-1);
+            }
           }
         }
       }
@@ -66,14 +91,14 @@
 
       .data {
         display: grid;
-        grid-template: 1fr / 1fr 1fr;
-        gap: 12vw;
+        grid-template: 1fr / 1fr 1fr 1fr;
+        justify-content: center;
+        gap: 20px;
 
-        &.multi_active {
-          grid-template: 1fr / 1fr 1fr 1fr;
-          gap: 20px;
-          justify-content: space-between;
-        }
+        // &.multi_active {
+        //   grid-template: 1fr / 1fr 1fr 1fr;
+        //   justify-content: space-between;
+        // }
 
         .post_data {
           display: grid;
