--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -245,9 +245,11 @@ main {
   border-radius: 15px;
   min-width: 60px;
   width: 100%;
-  background: linear-gradient(to right,
-      #5c89ff var(--male),
-      #fc65ff var(--male) 100%);
+  background: linear-gradient(
+    to right,
+    #5c89ff var(--male),
+    #fc65ff var(--male) 100%
+  );
 
   &::before {
     content: attr(data-male);
