--- a/src/widgets/calculateIncome/UI/styles.module.scss
+++ b/src/widgets/calculateIncome/UI/styles.module.scss
@@ -1,7 +1,7 @@
 .calculate__wrapper {
   display: grid;
   grid-auto-flow: row;
-  background-image: url("/images/assets/background2.png");
+  background-image: url("/public/images/assets/turnkey.svg");
   background-size: cover;
   background-position: center;
   border-radius: 50px 50px 0 0;
