--- a/src/entities/accommCard/UI/styles.module.scss
+++ b/src/entities/accommCard/UI/styles.module.scss
@@ -1,10 +1,7 @@
 .wrapper {
   grid-area: item1;
-  background: linear-gradient(
-    90deg,
-    rgba(71, 114, 230, 0.1) 0.03%,
-    rgba(142, 84, 233, 0.1) 100.36%
-  );
+  background: #e7ebfc;
+  box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.21);
   border-radius: 40px 40px 0px 40px;
   padding: 30px 40px 30px 30px;
   width: 100%;
@@ -13,6 +10,7 @@
   &.vencom {
     color: var(--Personal-colors-White);
     background: var(--Gradients-Gradient-1);
+    box-shadow: 0px 4px 21px 0px rgba(144, 71, 237, 0.45);
     grid-area: item2;
   }
 }
