--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -1,10 +1,11 @@
 .card {
   display: grid;
-  // border-radius: 12px;
-  // border: 1px solid var(--Personal-colors-main);
+  border-radius: 12px;
+  border: 1px solid var(--Personal-colors-main);
   padding: 20px 0;
   width: 100%;
-  height: 180px;
+  min-height: 200px;
+  background-color: var(--Personal-colors-White);
 
   &.chat {
     grid-template: 1fr / 6fr 3fr 3fr 6fr 1fr;
