--- a/src/features/bloggerPlatformCard/skeletonBloggerPlatformCard/styles.module.scss
+++ b/src/features/bloggerPlatformCard/skeletonBloggerPlatformCard/styles.module.scss
@@ -6,8 +6,27 @@
 
   .card {
     display: grid;
-    grid-template: 1fr / 7.5fr 12fr 1.4fr;
+    grid-template: 1fr / 1fr 3fr 4fr 0.4fr;
     padding-top: 20px;
+
+    .rate {
+      display: grid;
+      grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+      column-gap: 5px;
+    }
+
+    &__logo {
+      display: grid;
+      align-items: center;
+
+      .logo {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 10px;
+        justify-content: center;
+        justify-items: center;
+      }
+    }
 
     &__description {
       display: grid;
@@ -27,10 +46,10 @@
           row-gap: 10px;
         }
 
-        &__date {
+        &__params {
           display: grid;
-          grid-auto-flow: row;
-          row-gap: 10px;
+          grid-template: 1fr / 1fr 1fr;
+          column-gap: 10px;
         }
       }
     }
@@ -43,13 +62,13 @@
 
       &__data {
         display: grid;
-        grid-template: 1fr / 3fr 4fr 2fr;
+        grid-template: 1fr / 1fr 2fr;
         align-items: center;
       }
 
       &__icons {
         display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+        grid-template: 1fr / 1fr 1fr 1fr 1fr;
         column-gap: 20px;
       }
 
