--- a/src/features/postPlatform/UI/styles.module.scss
+++ b/src/features/postPlatform/UI/styles.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   border-radius: 10px;
   border: 0.5px solid var(--Containers);
-  background: rgba(255, 255, 255, 0);
+  background: var(--Personal-colors-White);
   padding: 10px;
 }
 
