--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -119,6 +119,7 @@ main {
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 80px);
+  width: 100vw;
   background: url("/images/rootBg/DesktopBG.svg") repeat top center;
   background-size: cover;
 
@@ -197,7 +198,7 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    // background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(5px);
   }
 }
@@ -381,38 +382,41 @@ main {
 }
 
 .border__gradient {
-  background: none;
-  position: relative;
+  border-radius: 12px;
+  box-shadow: inset 0px 0px 0px 1.5px var(--Personal-colors-main);
+  background-color: #fff;
+  // background: none;
+  // position: relative;
 
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: var(--zIndexTop);
-    margin: var(--borderMass);
+  // &:before {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   z-index: var(--zIndexTop);
+  //   margin: var(--borderMass);
 
-    border-radius: calc(var(--borderRadius) - var(--borderMass));
-    /* !importanté */
-    background: var(--Personal-colors-White);
-  }
+  //   border-radius: calc(var(--borderRadius) - var(--borderMass));
+  //   /* !importanté */
+  //   background: var(--Personal-colors-White);
+  // }
 
-  &:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: var(--zIndexBottom);
-    // z-index: -2;
-    border-radius: var(--borderRadius);
-    /* !importanté */
-    // background: var(--Gradients-Gradient-1);
-    background: var(--gradient);
-  }
+  // &:after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   z-index: var(--zIndexBottom);
+  //   z-index: -2;
+  //   border-radius: var(--borderRadius);
+  //   /* !importanté */
+  //   background: var(--Gradients-Gradient-1);
+  //   background: var(--gradient);
+  // }
 }
 
 @layer base {
