--- a/src/widgets/turnkey/UI/styles.module.scss
+++ b/src/widgets/turnkey/UI/styles.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  background-image: url("/images/assets/background2.png");
+  background-image: url("/public/images/assets/turnkey.svg");
   background-size: cover;
-  background-position: center;
+  background-position: right;
   border-radius: 50px 50px 0 0;
   padding: calc(var(--margin-section-xl) / 2);
 
