feat: orders features

--- a/src/entities/advDevProjectCard/UI/styles.module.scss
+++ b/src/entities/advDevProjectCard/UI/styles.module.scss
@@ -5,6 +5,7 @@
   height: 80px;
   // border-radius: 12px;
   // border: 1px solid var(--Personal-colors-main);
+  box-shadow: inset 0px 0px 4px rgba(146, 71, 245, 0.5);
 
   &__title {
     display: grid;
