--- a/src/features/advProjectCard/UI/styles.module.scss
+++ b/src/features/advProjectCard/UI/styles.module.scss
@@ -2,7 +2,8 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 20px;
-  // border: 1px solid var(--Personal-colors-main);
+  border-radius: 12px;
+  box-shadow: inset 0px 0px 4px rgba(146, 71, 245, 0.5);
   padding-top: 20px;
   min-height: 210px;
 
