--- a/src/features/barTypesFilter/UI/styles.module.scss
+++ b/src/features/barTypesFilter/UI/styles.module.scss
@@ -15,11 +15,28 @@
 
   li {
     cursor: pointer;
+    position: relative;
 
     &.active {
       color: var(--Personal-colors-main);
-      border-bottom: 3px solid var(--Personal-colors-main);
+      // border-bottom: 3px solid var(--Personal-colors-main);
       padding-bottom: 10px;
+      background: var(--Gradients-Gradient-1);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      /* Включаем поддержку для Firefox */
+      background-clip: text;
+      color: transparent;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 2.5px;
+        background: var(--Gradients-Gradient-1);
+      }
     }
   }
 }
