--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -291,17 +291,15 @@
       p {
         color: var(--Personal-colors-black);
         font-size: 16px;
-        font-style: normal;
         font-weight: 600;
-        line-height: 0.75;
       }
 
       span {
         color: var(--Personal-colors-black);
         font-size: 10px;
-        font-style: normal;
         font-weight: 400;
-        line-height: 0.75;
+        max-width: 80%;
+        margin: 0 auto;
       }
     }
   }
@@ -365,7 +363,7 @@
     justify-content: center;
     border-radius: 12px;
     border: 1px solid var(--Inside-container);
-    margin: 0 30px 0 10px;
+    margin: 0 0px 0 10px;
     padding: 0 30px;
 
     div {
@@ -379,7 +377,7 @@
         font-size: 16px;
         font-style: normal;
         font-weight: 600;
-        line-height: 0.75;
+        line-height: 1.3;
       }
 
       span {
