--- a/src/features/bloggerOfferCard/UI/styles.module.scss
+++ b/src/features/bloggerOfferCard/UI/styles.module.scss
@@ -31,7 +31,7 @@
         display: grid;
         align-content: center;
         align-items: center;
-        justify-content: start;
+        justify-content: center;
         p {
           font-size: 24px;
           font-style: normal;
