--- a/src/widgets/header/UI/wallet/styles.module.scss
+++ b/src/widgets/header/UI/wallet/styles.module.scss
@@ -5,7 +5,8 @@
   background: var(--Gradients-Gradient-1);
   transition:
     background 0.3s ease,
-    color 0.3s ease; /* Плавная смена цвета */
+    color 0.3s ease;
+  /* Плавная смена цвета */
   color: var(--Personal-colors-White);
 
   cursor: pointer;
@@ -79,23 +80,28 @@
   &.active__wallet {
     color: var(--Personal-colors-black);
     // border: 1px solid var(--Personal-colors-main);
-    // background: rgba(255, 255, 255, 0.25);
-    // transition:
-    //   background 0.3s ease,
-    //   color 0.3s ease; /* Плавная смена цвета */
+    background: rgba(255, 255, 255, 0.25);
+    transition:
+      background 0.3s ease,
+      color 0.3s ease;
+    /* Плавная смена цвета */
 
-    //   background: none;
-    //   background-clip: padding-box;
-    //   $border-mass : 1px;
+    background: none;
+    background-clip: padding-box;
+    $border-mass: 1px;
 
-    //   &:before {
-    //     content: '';
-    //     position: absolute;
-    //     top: 0; right: 0; bottom: 0; left: 0;
-    //     z-index: -1;
-    //     margin: 1px;
-    //     border-radius:  calc(var(--borderRadius) - $border-mass); /* !importanté */
-    //     background: var(--Personal-colors-White);
+    // &:before {
+    //   content: '';
+    //   position: absolute;
+    //   top: 0;
+    //   right: 0;
+    //   bottom: 0;
+    //   left: 0;
+    //   z-index: -1;
+    //   margin: 1px;
+    //   border-radius: calc(var(--borderRadius) - $border-mass);
+    //   /* !importanté */
+    //   background: var(--Personal-colors-White);
     // }
 
     // &:after {
@@ -105,9 +111,11 @@
     //   right: 0;
     //   bottom: 0;
     //   left: 0;
-    //   z-index: -2; /* Псевдо-элемент будет под градиентным фоном */
+    //   z-index: -2;
+    //   /* Псевдо-элемент будет под градиентным фоном */
     //   // margin: 10px; /* !importanté */
-    //   border-radius: var(--borderRadius); /* !importanté */
+    //   border-radius: var(--borderRadius);
+    //   /* !importanté */
     //   background: var(--Gradients-Gradient-1);
     // }
 
