feat: add manager Api and Advertiser Api (manager projects)

--- a/src/features/managerNewProjectCard/UI/styles.module.scss
+++ b/src/features/managerNewProjectCard/UI/styles.module.scss
@@ -59,7 +59,7 @@
     border-right: 1px solid var(--Personal-colors-main);
     border-left: 1px solid var(--Personal-colors-main);
     border-top: 1px solid var(--Personal-colors-main);
-    padding: 30px 40px 0 40px;
+    padding: 30px 40px;
 
     &__left {
       display: grid;
