--- a/src/shared/ui/postDisplay/displayInstagram/stories/media/ui/styles.module.scss
+++ b/src/shared/ui/postDisplay/displayInstagram/stories/media/ui/styles.module.scss
@@ -2,16 +2,16 @@
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
-  gap: 5px;
+  gap: 3px;
   position: absolute;
-  bottom: 10px;
+  top: 4px;
   left: 50%;
   transform: translate(-50%);
+  width: 96%;
 
   &__item {
-    width: 8px;
-    height: 8px;
-    border-radius: 100%;
+    height: 2px;
+    border-radius: 10px;
     background: rgba(255, 255, 255, 0.5);
   }
 
