--- a/src/shared/ui/postDisplay/displayTelegram/UI/styles.module.scss
+++ b/src/shared/ui/postDisplay/displayTelegram/UI/styles.module.scss
@@ -94,9 +94,8 @@
       padding-top: 80px;
       padding-bottom: 60px;
       background: #142530;
-      margin: 9px 11px;
-      // border-radius: 53.5px;
-      border-radius: 3vw;
+      margin: 7.5px 11px;
+      border-radius: 40px;
 
       .content {
         height: 100%;
