--- a/src/shared/ui/postDisplay/displayYoutube/shorts/styles.module.scss
+++ b/src/shared/ui/postDisplay/displayYoutube/shorts/styles.module.scss
@@ -31,36 +31,34 @@
     }
 
     .footer {
-      width: 86%;
+      width: 90%;
       position: absolute;
-      bottom: 44px;
+      bottom: 35px;
       left: 50%;
       transform: translate(-50%);
       z-index: 1;
       display: grid;
-      grid-template: 1fr / 1fr auto;
+      grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
       align-items: center;
-      justify-content: start;
+      justify-content: space-between;
       justify-items: center;
-      gap: 10px;
+      gap: 5px;
       color: #fff;
 
-      &__send_msg {
-        padding: 7px 10px;
-        border-radius: 15px;
-        border: 1px solid rgba(255, 255, 255, 1);
-        font-size: 10px;
-        width: 100%;
-        color: rgba(255, 255, 255, 1);
-      }
-      &__icons {
+      div {
         display: grid;
-        grid-auto-flow: column;
-        gap: 5px;
-      }
-    }
+        grid-auto-flow: row;
+        gap: 2px;
+        justify-items: center;
+        align-content: space-between;
+        height: 100%;
 
-    .mockup {
+        p {
+          font-size: 6px;
+          font-weight: 400;
+          color: #fff;
+        }
+      }
     }
 
     .display {
@@ -70,7 +68,7 @@
       height: 97.5%;
       width: 93.7%;
       padding-top: 50px;
-      padding-bottom: 80px;
+      padding-bottom: 60px;
       background: #000000;
       margin: 7.5px 11px;
       border-radius: 40px;
@@ -86,40 +84,6 @@
         .post {
           width: 100%;
           position: relative;
-
-          .head {
-            position: absolute;
-            z-index: 1;
-            left: 2px;
-            top: 10px;
-            color: #fff;
-            display: grid;
-            grid-auto-flow: column;
-            justify-content: space-between;
-            align-items: center;
-
-            .account {
-              display: grid;
-              align-items: center;
-              grid-template: 1fr / 20px 1fr;
-              gap: 5px;
-
-              &__avatar {
-                width: 20px;
-                height: 20px;
-                background: #fff;
-                border-radius: 100%;
-                border: 1px solid #df006f;
-              }
-
-              &__name {
-                color: #fff;
-                line-height: 1.2;
-                font-weight: 500;
-                font-size: 10px;
-              }
-            }
-          }
 
           .empty__photo {
             height: 34vw;
@@ -150,6 +114,26 @@
             padding: 0px 10px;
             padding-top: 5px;
             color: #fff;
+          }
+        }
+
+        .no_content {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          height: 60%;
+
+          svg {
+            width: 80px;
+            height: 80px;
+          }
+
+          p {
+            margin-top: 10px;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.5);
+            font-weight: 500;
           }
         }
 
