feat: add manager projects sceletons and little changes

--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -353,8 +353,8 @@ main {
 
 .deactive {
   pointer-events: none;
-  // background: var(--Inside-container);
-  // filter: grayscale(100%);
+  background: var(--Inside-container);
+  filter: grayscale(100%);
 }
 
 // .swiper-wrapper{
