--- a/src/features/managerProjectCard/UI/styles.module.scss
+++ b/src/features/managerProjectCard/UI/styles.module.scss
@@ -266,7 +266,7 @@
     border-left: 1px solid var(--Personal-colors-main);
     border-top: 1px solid var(--Personal-colors-main);
     row-gap: 10px;
-    padding: 10px 10px 0 10px;
+    padding: 10px;
     border-radius: 12px 12px 0 0;
   }
 }
