--- a/src/entities/order/ui/managerSubcard/UI/styles.module.scss
+++ b/src/entities/order/ui/managerSubcard/UI/styles.module.scss
@@ -98,6 +98,7 @@
           font-weight: 600;
           line-height: 0.75;
         }
+
         span {
           color: var(--Personal-colors-black);
           font-size: 12px;
@@ -192,6 +193,7 @@
     text-align: center;
     padding: 0 50px;
     height: 100%;
+
     p {
       padding: 0 20px;
       font-size: 16px;
@@ -336,7 +338,8 @@
 
       &__top {
         display: grid;
-        grid-template: 1fr / 1fr 1fr;
+        // grid-template: 1fr / 1fr 1fr;
+        grid-auto-flow: column;
         column-gap: 5px;
       }
     }
@@ -388,6 +391,7 @@
         font-weight: 600;
         line-height: normal;
       }
+
       div {
         display: grid;
         grid-auto-flow: row;
