--- a/src/entities/channel/ui/information/parameters/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/parameters/UI/styles.module.scss
@@ -10,8 +10,8 @@
     justify-items: start;
     padding: 20px;
     border-radius: 12px;
-    border: 2px solid var(--black-20);
     background: var(--Personal-colors-White);
+    box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
 
     p {
       color: var(--Containers);
