--- a/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
+++ b/src/pages/layouts/components/header/UI/dropdownMenu/UI/menuItem/styles.module.scss
@@ -49,10 +49,15 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+
+      svg {
+        min-width: 20px;
+        min-height: 20px;
+      }
     }
 
     &:hover {
-      color: var(--Personal-colors-main);
+      // color: var(--Personal-colors-main);
       border-radius: 12px;
       background: #e6e6e6;
     }
